traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:21: error: not found: value setPosition
    setPosition(getX()+1,0)
    ^