traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() 
{
  var count=1
  while(!posFinale)
  	{
      goNext()
      ecritMessage(count)
      count+=1
    }
}


def posFinale():Boolean=
{
  return((getMondeHauteur()==(getY()+1))&&(getMondeLargeur()==getX()+1))
}

def goNext()
{
  if (estFaceMur())
  {
    setPosition(getX()+1,0)
  }
}